<resources>
    <string name="app_name">Animal App</string>
    <string name="logo_name">Animal Sound Recognition</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="birthday">Birthday (mmddyyyy)</string>
    <string name="uta_id">UTA ID</string>
    <string name="phone_number">Phone Number</string>
    <string name="model_information">Model Information</string>
    <string name="logout">Logout</string>
    <string name="rec_and_class">Record and Classify</string>
    <string name="profile">Profile</string>
    <string name="statistics">Statistics</string>
    <string name="model_info">Model Information</string>
    <string name="forgot_password_detail">Enter the email associated with the account.</string>
    <string name="next">Next</string>
</resources>