<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue_main"
    tools:context=".Common.Dashboard">

    <TextView
        android:id="@+id/dashboard_title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00000000"
        android:fontFamily="@font/boogaloo"
        android:text="@string/logo_name"
        android:textColor="@color/white"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.35"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:background="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dashboard_title_text" />


    <Button
        android:id="@+id/dashboard_logout_button"
        android:background="@color/light_blue_accent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="250dp"
        android:layout_marginBottom="19dp"
        android:text="@string/logout"
        app:layout_constraintBottom_toTopOf="@+id/dashboard_classify_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dashboard_title_text" />

    <Button
        android:id="@+id/dashboard_classify_button"
        android:background="@color/light_blue_accent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="274dp"
        android:layout_marginBottom="20dp"
        android:text="@string/rec_and_class"
        app:layout_constraintBottom_toTopOf="@+id/dashboard_profile_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dashboard_logout_button" />

    <Button
        android:id="@+id/dashboard_profile_button"
        android:background="@color/light_blue_accent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="61dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="285dp"
        android:layout_marginBottom="12dp"
        android:text="@string/profile"
        app:layout_constraintBottom_toTopOf="@+id/dashboard_stats_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dashboard_classify_button" />

    <Button
        android:id="@+id/dashboard_stats_button"
        android:background="@color/light_blue_accent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="61dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="293dp"
        android:layout_marginBottom="103dp"
        android:text="@string/statistics"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dashboard_profile_button" />


    <Button
        android:id="@+id/dashboard_model_info_button"
        android:background="@color/light_blue_accent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="222dp"
        android:layout_marginBottom="33dp"
        android:text="@string/model_info"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dashboard_stats_button" />

</androidx.constraintlayout.widget.ConstraintLayout>